# scrip_in_didi

./: README.md  analyze_boxes.py
vision-demo_wwl/: CMakeLists.txt  README.md  run.sh
vision-demo_wwl/app/: test_segmentation.cpp  video_demo.cpp
vision-demo_wwl/include/: box.h  detection.h  laneDetection.h  predictor.h  segmentation.h  stereo.h
vision-demo_wwl/models/detection/: v1.0.1_det.caffemodel  v1.0.1_det.prototxt
vision-demo_wwl/models/v1.1.0/: v1.1.0.prototxt  v1.1.0_lane.caffemodel  v1.1.0_lane.prototxt
vision-demo_wwl/models/v1.1.1/: v1.1.1.prototxt  v1.1.1_lane.caffemodel
vision-demo_wwl/src/: detection.cpp  laneDetection.cpp  predictor.cpp  segmentation.cpp  stereo.cpp
vision-detector_qh/: .gitignore  README.md  log_smallssd.txt  log_smallssd_change_min_size.txt  log_smallssd_cutRandOne.txt  log_smallssd_fromBaseline.txt  log_smallssd_min_size_5.txt  log_smallssd_min_size_sample.txt  out_cutoff_sample  out_cutoff_sample_v1  out_cutoff_sample_v2  smallssd.sh  smallssd_cutRandOne.sh  test.sh  train.sh  train_v0327_smallssd.sh
vision-detector_qh/test/: detec.py  detection.py  test.sh  test_light.py  test_models.py
vision-detector_qh/test/test_wwl/: .de_smallssd_20fenminf_change9.py.swp  de_1.py  de_baseline_4.py  de_baseline_overlap.py  de_baseline_overlap_0.3.py  de_large_1.py  tester.py  (+17 more)
vision-detector_qh/train/: __init__.py
vision-detector_wwl/: show.sh  test.sh  train.sh
vision-detector_wwl/app/: box_io.py  box_proc.py  detector.py
vision-detector_wwl/test/: test_models.py  tester.py
vision-detector_wwl/train/: debug.py  logger.py
(+89 files in other folders)
